# stm32_servo_control_cpp

./: .cproject  .mxproject  .project  CMakeLists.txt  stm32_servo_control_cpp.ioc
Core/Inc/: pinmap.h  servo.h
Core/Src/: main.c  main.cpp  servo.cpp  stm32l4xx_hal_msp.c
